datamining template updated

--- a/adt/datamining/templates/datamining/datamining_page.html
+++ b/adt/datamining/templates/datamining/datamining_page.html
@@ -8,6 +8,7 @@
     <!-- Other content here -->
 
     <!-- Display the Matplotlib plot -->
+    Compare:
     {{ fig_html|safe }}
 
     <!-- Other content here -->
