datamining template updated 1

--- a/adt/datamining/templates/datamining/datamining_page.html
+++ b/adt/datamining/templates/datamining/datamining_page.html
@@ -8,7 +8,7 @@
     <!-- Other content here -->
 
     <!-- Display the Matplotlib plot -->
-    Compare:
+    Compare cars:
     {{ fig_html|safe }}
 
     <!-- Other content here -->
