--- a/adt/templates/base.html
+++ b/adt/templates/base.html
@@ -12,17 +12,27 @@
     <link rel="stylesheet" href="...">
 </head>
 <body>
-    <!-- Add your navigation bar or header here -->
-    <header>
-        <h1>VerSys</h1>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/dashboard/">Dashboard</a></li>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/datamining/">VerSys</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="/">Home</a>#}
+{#                </li>#}
+                <li class="nav-item">
+                    <a class="nav-link" href="/datamining/">Dashboard</a>
+                </li>
                 <!-- Add more navigation links as needed -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/datamining/select-car/">Select Car</a>
+                </li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <!-- Content block to be overridden by child templates -->
     <div class="content">
@@ -30,9 +40,10 @@
     </div>
 
     <!-- Add your footer here -->
-    <footer>
+    <footer class="text-center">
         <p>&copy; 2024 VerSys</p>
     </footer>
+
 
     <!-- Bootstrap JS and other JavaScript scripts or links -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
