fixed data files issue and added spider chart

--- a/adt/datamining/templates/datamining/compare_cars.html
+++ b/adt/datamining/templates/datamining/compare_cars.html
@@ -48,5 +48,11 @@
             </div>
         </div>
     </div>
+
+    <div>
+        <!-- <h3>Car Attributes comparison</h3>
+        <div>Spider chart</div> -->
+        {{ spider_html|safe }}
+    </div>
 </div>
 {% endblock %}
