--- a/adt/templates/base.html
+++ b/adt/templates/base.html
@@ -1,6 +1,6 @@
 <!-- base.html -->
-
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,15 +14,14 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/datamining/">VerSys</a>
+        <a class="navbar-brand" href="/datamining/">
+            <img src="{% static 'images/logo.jpeg' %}" alt="Logo" style="width: 200px; height: auto;">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="/">Home</a>#}
-{#                </li>#}
                 <li class="nav-item">
                     <a class="nav-link" href="/datamining/">Dashboard</a>
                 </li>
