ui theme updated

--- a/adt/datamining/templates/datamining/car_details.html
+++ b/adt/datamining/templates/datamining/car_details.html
@@ -5,6 +5,21 @@
 {% block title %}Car Details{% endblock %}
 
 {% block content %}
+
+<style>
+    .table .thead-dark th {
+        color: #fff;
+        background-color: #f5b115 !important;
+        border-color: #f5b115 !important;
+    }
+
+    .btn-primary {
+        color: #fff;
+        background-color: #f5b115 !important;
+        border-color: #f5b115 !important;
+    }
+</style>
+
 <div class="container mt-5">
     <h2 class="mb-4">Car Details</h2>
     <div>
