--- a/adt/datamining/templates/datamining/compare_cars.html
+++ b/adt/datamining/templates/datamining/compare_cars.html
@@ -3,6 +3,22 @@
 {% block title %}Car Comparison{% endblock %}
 
 {% block content %}
+
+<style>
+    .table .thead-dark th {
+        color: #fff;
+        background-color: #f5b115 !important;
+        border-color: #f5b115 !important;
+    }
+
+    .btn-dark {
+        color: #fff;
+        background-color: #f5b115 !important;
+        border-color: #f5b115 !important;
+    }
+
+</style>
+
 <div class="container mt-5">
     <!-- Button to go back to car details page -->
     <div class="row mt-4">
