--- a/adt/datamining/templates/datamining/select-car.html
+++ b/adt/datamining/templates/datamining/select-car.html
@@ -3,8 +3,24 @@
 {% extends 'base.html' %}
 
 {% block title %}Car Information Dashboard{% endblock %}
+{% load static %}
 
 {% block content %}
+
+<style>
+    .table .thead-dark th {
+        color: #fff;
+        background-color: #f5b115 !important;
+        border-color: #f5b115 !important;
+    }
+
+    .btn-primary {
+        color: #fff;
+        background-color: #f5b115 !important;
+        border-color: #f5b115 !important;
+    }
+</style>
+
 <div class="container mt-5">
     <h2 class="mb-4">Car Information Dashboard</h2>
     <!-- Filtering Form -->
