--- a/adt/templates/base.html
+++ b/adt/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f5b115">
         <a class="navbar-brand" href="/datamining/">
             <img src="{% static 'images/logo.jpeg' %}" alt="Logo" style="width: 200px; height: auto;">
         </a>
