--- a/adt/datamining/templates/datamining/dashboard.html
+++ b/adt/datamining/templates/datamining/dashboard.html
@@ -14,13 +14,13 @@
     <div class="row">
         <div class="col-md-6">
             <h5>Top 10 Mean CO2 Emissions by Brand</h5>
-            <div class="image-container">
+            <div class="image-container style="width: 45%;">
                 {{ top_html|safe }}
             </div>
         </div>
         <div class="col-md-6">
             <h5>Bottom 10 Mean CO2 Emissions by Brand</h5>
-            <div class="image-container">
+            <div class="image-container" style="width: 45%;">
                 {{ bottom_html|safe }}
             </div>
         </div>
